--- a/CSS/box-model.css
+++ b/CSS/box-model.css
@@ -1,3 +1,12 @@
+/*
+    # Caixas
+
+    * Quase tudo são caixas
+    * posicionamentos, tamanhos, espaçamentos, bordas, cores
+    * Caixa pode ficar ao lado uma da outra, ou acima
+    * Elementos HTML são
+*/
+
 h1 {
     border: 2px solid red;
     padding: 45px;
